data/all_generated_tests/raw_wast_tests/br_if_UnreachableCodeExecution_1499.wast
;; 10. **Test 10**: Implement control flow with mixed types, where `br_if` instructions rely on popping mixed-type operands. Manage a profile where conditional branching to `unreachable` occurs based on type checks, ensuring correct operand management across value types and preventing misinterpretation leading to `unreachable`.

(assert_invalid
  (module
    (func $test-mixed-types-unreachable
      (block (result i32)
        (block (result i32)
          (br_if 0 (unreachable) (i32.const 1))
          (i32.const 0)
        )
        (br_if 0 (i64.const 0))
      )
    )
  )
  "type mismatch"
)